--- a/elmslie-samples/android-loader/src/main/res/layout/activity_main.xml
+++ b/elmslie-samples/android-loader/src/main/res/layout/activity_main.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
+            android:id="@+id/currentValue"
             android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:gravity="center"
+            tools:text="Current value: unknown" />
+
+    <Button
+            android:id="@+id/reload"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="@string/reload" />
 
-        <TextView
-                android:id="@+id/currentValue"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:gravity="center"
-                android:text="Current value: unknown" />
-
-        <Button
-                android:id="@+id/reload"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="Reload" />
-
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
