Implement state saving
Utilize saved state handle in order to provide ability to persist store's state

Resolves #215

--- a/elmslie-samples/coroutines-loader/src/main/res/layout/fragment_main.xml
+++ b/elmslie-samples/coroutines-loader/src/main/res/layout/fragment_main.xml
@@ -15,6 +15,13 @@
         tools:text="Screen id: " />
 
     <TextView
+        android:id="@+id/generatedID"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        tools:text="Generated id: " />
+
+    <TextView
         android:id="@+id/currentValue"
         android:layout_width="match_parent"
         android:layout_height="80dp"
